<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/primaryLightColor"
	android:gravity="center"
	android:orientation="vertical"
	tools:context=".activity.LoginActivity">

	<EditText
		android:id="@+id/et_username"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="48dp"
		android:layout_marginEnd="48dp"
		android:hint="@string/username"
		android:inputType="text"
		android:textAlignment="center"
		android:textColor="@color/primaryTextColor"
		android:textColorHint="@color/primaryTextColorHints"
		android:textSize="28sp" />

	<EditText
		android:id="@+id/et_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="48dp"
		android:layout_marginEnd="48dp"
		android:ems="10"
		android:hint="@string/password"
		android:inputType="textPassword"
		android:textAlignment="center"
		android:textColor="@color/primaryTextColor"
		android:textColorHint="@color/primaryTextColorHints"
		android:textSize="28sp" />

	<Button
		android:id="@+id/btn_sign_in"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:layout_marginStart="48dp"
		android:layout_marginEnd="48dp"
		android:backgroundTint="@color/primaryDarkColor"
		android:text="@string/btn_sign_in"
		android:textAllCaps="false"
		android:textColor="@color/primaryTextColor"
		android:textSize="20sp" />

	<Button
		android:id="@+id/btn_register"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:layout_marginStart="48dp"
		android:layout_marginEnd="48dp"
		android:backgroundTint="@color/primaryDarkColor"
		android:text="@string/btn_register"
		android:textAllCaps="false"
		android:textColor="@color/primaryTextColor"
		android:textSize="20sp" />

</LinearLayout>