<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/primaryLightColor"
        android:layout_height="match_parent"
        tools:context=".activity.NewsDetailActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/iv_detail_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="80dp"
                android:layout_marginStart="80dp"
                android:layout_weight="1"
                android:contentDescription="@string/imageview1"
                android:scaleType="centerCrop"
                android:src="@drawable/adventure_automobile_classic_2533092"/>

        <TextView
                android:id="@+id/tv_title"
                android:text="@string/text_title"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <ScrollView
                android:background="@color/primaryColor"
                android:layout_weight="2"
                android:fadeScrollbars="false"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:scrollbarSize="8dp"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            <TextView
                    android:id="@+id/tv_body"
                    android:textSize="18sp"
                    android:textIsSelectable="true"
                    android:text="@string/tv_body_text"
                    android:textColor="@color/primaryTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </ScrollView>

        <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/secondaryColor"
                android:text="@string/btn_share"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/primaryDarkColor"
                android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>